chore(ci): update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -3,7 +3,8 @@
   "extends": [
     "config:recommended",
     ":semanticCommits",
-    ":semanticCommitTypeAll(ci)"
+    ":semanticCommitTypeAll(ci)",
+    ":assignAndReview(btoic)"
   ],
 "customManagers": [
     {
